--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  },
+  }
+  ,
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
@@ -15,12 +16,18 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@popperjs/core": "^2.10.2",
+    "file-system": "^1.2.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
